--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <html>
 
 <head>
+    <title>Site do Guilherme</title>
+    <style>
+        body{
+            background-color: aquamarine;
+            color: blue;
+        }
 
+        h1{
+            text-align: center;
+        }
 <body>
     <h1>Meu primeiro site</h1>
     <p>Neste eu usei as tecnologias:</p>
@@ -16,5 +25,13 @@
         <li>Versel
         <li>VScode</li>  
         
-        </ol>   
-</html>
+        </ol>
+
+        <div>
+
+             <img src="https://images.pexels.com/photos/30748532/pexels-photo-30748532/free-photo-of-rua-estreita-e-charmosa-na-paisagem-urbana-italiana.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"/>
+
+             </div>
+         </body>
+         
+         </html>
